tests/snapshots/snapshot_protocol__batch_item_status_failed.snap
---
source: tests/snapshot_protocol.rs
expression: s
---
{
  "type": "failed",
  "error": "invalid JSON: unexpected token"
}
