tests/snapshots/snapshot_protocol__batch_item_status_skipped.snap
---
source: tests/snapshot_protocol.rs
expression: s
---
{
  "type": "skipped",
  "reason": "duplicate envelope detected"
}
