tests/snapshots/snapshot_protocol__batch_item_status_success.snap
---
source: tests/snapshot_protocol.rs
expression: "BatchItemStatus::Success"
---
{
  "type": "success"
}
