tests/snapshots/snapshot_protocol__batch_request_snapshot.snap
---
source: tests/snapshot_protocol.rs
expression: req
---
{
  "id": "batch-001",
  "envelopes": [
    {
      "t": "fatal",
      "ref_id": null,
      "error": "test"
    }
  ],
  "created_at": "2025-01-15T12:00:00Z"
}
