tests/snapshots/snapshot_protocol__batch_result_failed.snap
---
source: tests/snapshot_protocol.rs
expression: r
---
{
  "index": 3,
  "status": {
    "type": "failed",
    "error": "serialization error"
  },
  "envelope": null
}
