tests/snapshots/snapshot_protocol__batch_result_success.snap
---
source: tests/snapshot_protocol.rs
expression: r
---
{
  "index": 0,
  "status": {
    "type": "success"
  },
  "envelope": null
}
