tests/snapshots/snapshot_protocol__envelope_event_run_completed.snap
---
source: tests/snapshot_protocol.rs
expression: env
---
{
  "t": "event",
  "ref_id": "00000000-0000-4000-8000-000000000001",
  "event": {
    "ts": "2025-01-15T12:00:00Z",
    "type": "run_completed",
    "message": "Task completed successfully"
  }
}
